# django_project

./: pyproject.toml
online_shop/: admin.py  serializers.py  settings.py  urls.py  views.py
online_shop/migrations/: 0001_initial.py  0002_alter_product_id.py
online_shop/models/: __init__.py  category.py  manufacturer.py  product.py
online_shop/static/css/: styles.css
online_shop/static/js/: scripts.js  sort-script.js
online_shop/templates/: index.html
